fix: Disable button hover effect on mobile and tablet

--- a/src/components/Icons/Downvote.module.scss
+++ b/src/components/Icons/Downvote.module.scss
@@ -9,14 +9,10 @@
   padding: 0.2rem;
   transition: all 0.2s;
 
-  &:hover {
-    fill: $danger-color;
-    background-color: $dark-color-hover;
-  }
-
-  @include m.breakpoint-max('sm') {
+  @include m.breakpoint('md') {
     &:hover {
-      fill: $secondary-color;
+      fill: $danger-color;
+      background-color: $dark-color-hover;
     }
   }
 }
@@ -28,7 +24,9 @@
   height: 1.8rem;
   padding: 0.2rem;
 
-  &:hover {
-    background-color: $dark-color-hover;
+  @include m.breakpoint('md') {
+    &:hover {
+      background-color: $dark-color-hover;
+    }
   }
 }
